[metadata]
name = emsal
version = 0.1.7
author = Doğukan Arslan
author_email = dogukan997@hotmail.com
description = A Python library that enables semi-automatic downloading of decisions based on year and decision number from the Supreme Court decision search interface.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Bilirkisi/emsal
project_urls =
    Bug Tracker = https://github.com/Bilirkisi/emsal/issues
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src